# moereport

./: ai_responses.md  analyze_expert_activation.py  analyze_experts_8gpu.py  analyze_experts_8gpu_v2.py  analyze_experts_8gpu_v3.py  analyze_experts_8gpu_v4_optimized.py  analyze_experts_8gpu_v5_correct copy.py  analyze_experts_8gpu_v6_correct.py  analyze_layer_expert_pair.py  claude_afterenter.py  claude_goodv4.py  claude_v21.py  diagclaude_1token.py  gem.py  gpt5_general.py  grok.py  grok_v21.py  grokv2.py  main.py  measuring_deepseek_activation.py  measuring_qwen_activation.py  moe_multi_gpu_fixed.py  moe_on_demand_runtime.py  moe_tensor_parallel.py  promtp.md  pyproject.toml  quick_expert_test.py  res.txt  run_8gpu_distributed.py  run_deepseek_v3.sh  sentact.py  sentact_ts.py  sentiment_pruning_config.json  test_dynamic.sh  test_gpu_setup.py  test_multi_gpu_large.sh  test_tensor_parallel.sh  tmp.md  tmp.txt  track_qwen_moe.qmd  (+1 more)
archive/: claude_general.py  claude_v21.py  diagclaude.py  dspec.py  gem.py  gem_general.py  gem_v21.py  gem_v22.py  gem_v3.py  generate_and_track_v2.py  gpt5.py  gpt5_v21.py  grok_v22.py  mixed_tasks_analysis.json  mixed_tasks_pruning_config.json  moe_o.py  moe_pruning_plan.json  moe_trace_qwen3.py  moefullanalysisclaude.py  promising_claude.py  routing_log.json  sentiment.py  sentiment_analysis.json  track_qwen_moe.qmd  which8.py
