[project]
name = "moereport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]
